--- a/src/main/resources/static/fullcalendar-5.10.1/lib/main.css
+++ b/src/main/resources/static/fullcalendar-5.10.1/lib/main.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
 
-  font-size: 1em
+  font-size: .90em;
 }
 .fc,
   .fc *,
@@ -268,10 +268,12 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
     margin-left: -1px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
+    display: none;
   }
 .fc-direction-ltr .fc-button-group > .fc-button:not(:last-child) {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+    border-radius: 5px;
   }
 .fc-direction-rtl .fc-button-group > .fc-button:not(:first-child) {
     margin-right: -1px;
@@ -454,8 +456,8 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
   }
 .fc .fc-bg-event .fc-event-title {
       margin: .5em;
-      font-size: .85em;
-      font-size: var(--fc-small-font-size, .85em);
+      font-size: .70em;
+      font-size: var(--fc-small-font-size, .70em);
       font-style: italic;
     }
 .fc .fc-highlight {
@@ -578,10 +580,10 @@ A HORIZONTAL event
 */
 .fc-h-event { /* allowed to be top-level */
   display: block;
-  border: 1px solid #3788d8;
-  border: 1px solid var(--fc-event-border-color, #3788d8);
-  background-color: #3788d8;
-  background-color: var(--fc-event-bg-color, #3788d8)
+  border: 1px solid #9974ef;
+  border: 1px solid var(--fc-event-border-color, #9974ef);
+  background-color: #9974ef;
+  background-color: var(--fc-event-bg-color, #9974ef)
 
 }
 .fc-h-event .fc-event-main {
@@ -815,7 +817,7 @@ A HORIZONTAL event
 
 }
 .fc .fc-daygrid-day-bottom {
-    font-size: .85em;
+    font-size: .70em;
     padding: 2px 3px 0
   }
 .fc .fc-daygrid-day-bottom:before {
@@ -876,8 +878,8 @@ A HORIZONTAL event
   position: relative; /* for z-indexes assigned later */
   white-space: nowrap;
   border-radius: 3px; /* dot event needs this to when selected */
-  font-size: .85em;
-  font-size: var(--fc-small-font-size, .85em);
+  font-size: .70em;
+  font-size: var(--fc-small-font-size, .70em);
 }
 /* --- the rectangle ("block") style of event --- */
 .fc-daygrid-block-event .fc-event-time {
@@ -915,8 +917,8 @@ A HORIZONTAL event
   box-sizing: content-box;
   width: 0;
   height: 0;
-  border: 4px solid #3788d8;
-  border: calc(var(--fc-daygrid-event-dot-width, 8px) / 2) solid var(--fc-event-border-color, #3788d8);
+  border: 4px solid #9974ef;
+  border: calc(var(--fc-daygrid-event-dot-width, 8px) / 2) solid var(--fc-event-border-color, #9974ef);
   border-radius: 4px;
   border-radius: calc(var(--fc-daygrid-event-dot-width, 8px) / 2);
 }
@@ -935,10 +937,10 @@ A VERTICAL event
 
 .fc-v-event { /* allowed to be top-level */
   display: block;
-  border: 1px solid #3788d8;
-  border: 1px solid var(--fc-event-border-color, #3788d8);
-  background-color: #3788d8;
-  background-color: var(--fc-event-bg-color, #3788d8)
+  border: 1px solid #9974ef;
+  border: 1px solid var(--fc-event-border-color, #9974ef);
+  background-color: #9974ef;
+  background-color: var(--fc-event-bg-color, #9974ef)
 
 }
 
@@ -1229,8 +1231,8 @@ A VERTICAL event
 }
 .fc-timegrid-event,
 .fc-timegrid-more-link { /* events need to be root */
-  font-size: .85em;
-  font-size: var(--fc-small-font-size, .85em);
+  font-size: .70em;
+  font-size: var(--fc-small-font-size, .70em);
   border-radius: 3px;
 }
 .fc-timegrid-event { /* events need to be root */
@@ -1241,8 +1243,8 @@ A VERTICAL event
   }
 .fc-timegrid-event .fc-event-time {
     white-space: nowrap;
-    font-size: .85em;
-    font-size: var(--fc-small-font-size, .85em);
+    font-size: .70em;
+    font-size: var(--fc-small-font-size, .70em);
     margin-bottom: 1px;
   }
 .fc-timegrid-event-short .fc-event-main-frame {
@@ -1253,8 +1255,8 @@ A VERTICAL event
     content: '\00a0-\00a0'; /* dash surrounded by non-breaking spaces */
   }
 .fc-timegrid-event-short .fc-event-title {
-    font-size: .85em;
-    font-size: var(--fc-small-font-size, .85em)
+    font-size: .70em;
+    font-size: var(--fc-small-font-size, .70em)
   }
 .fc-timegrid-more-link { /* does NOT inherit from fc-timegrid-event */
   position: absolute;
@@ -1439,8 +1441,8 @@ A VERTICAL event
     box-sizing: content-box;
     width: 0;
     height: 0;
-    border: 5px solid #3788d8;
-    border: calc(var(--fc-list-event-dot-width, 10px) / 2) solid var(--fc-event-border-color, #3788d8);
+    border: 5px solid #9974ef;
+    border: calc(var(--fc-list-event-dot-width, 10px) / 2) solid var(--fc-event-border-color, #9974ef);
     border-radius: 5px;
     border-radius: calc(var(--fc-list-event-dot-width, 10px) / 2);
   }
