--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,16 +1,5 @@
-/*------------------------------------------------------------------
-[Table of contents]
-
-1.  Template default CSS
-	1.1	Variables
-	1.2	Mixins
-	1.3	Flexbox
-	1.4	Reset
-
--------------------------------------------------------------------*/
-
 /*----------------------------------------*/
-/* Template default CSS
+/*  전체 default CSS
 /*----------------------------------------*/
 
 html,
@@ -92,7 +81,7 @@ ol {
 
 
 /*---------------------
-  Shop Details
+  상세 페이지 기본 CSS
 -----------------------*/
 
 .product-details {
@@ -104,14 +93,14 @@ ol {
 }
 
 .product__details__pic__item img {
-	min-width: 100%;
+	min-width: 30%;
 }
 
 .product__details__pic__slider img {
 	cursor: pointer;
 }
 
-.product__details__pic__slider.owl-carousel .owl-item img {
+.product__details__pic__slider img {
 	width: auto;
 }
 
@@ -132,14 +121,12 @@ ol {
 }
 
 .product__details__text .product__details__rating span {
-	color: #dd2222;
+	color: purple;
 	margin-left: 4px;
 }
 
-.product__details__text .product__details__price {
-	font-size: 30px;
-	color: #dd2222;
-	font-weight: 600;
+.product__details__text .product__details__date {
+	color: purple;
 	margin-bottom: 15px;
 }
 
@@ -153,13 +140,13 @@ ol {
 	margin-bottom: 5px;
 }
 
-.product__details__text .heart-icon {
+/* .product__details__text .heart-icon {
 	display: inline-block;
 	font-size: 16px;
 	color: #6f6f6f;
 	padding: 13px 16px 13px;
 	background: #f5f5f5;
-}
+} */
 
 .product__details__text ul {
 	border-top: 1px solid #ebebeb;
@@ -188,14 +175,14 @@ ol {
 	display: inline-block;
 }
 
-.product__details__text ul li .share a {
+/* .product__details__text ul li .share a {
 	display: inline-block;
 	font-size: 15px;
 	color: #1c1c1c;
 	margin-right: 25px;
-}
+} */
 
-.product__details__text ul li .share a:last-child {
+.product__details__text ul li .share {
 	margin-right: 0;
 }
 
@@ -239,6 +226,16 @@ ol {
 	margin-right: 65px;
 }
 
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: #495057;
+    background-color: #fff;
+    border-color: #dee2e6 #dee2e6 #fff;
+}
+
+.nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover {
+    border-color: #e9ecef #e9ecef #dee2e6;
+}
+
 .product__details__tab .nav-tabs li:last-child {
 	margin-right: 0;
 }
@@ -252,6 +249,7 @@ ol {
 	border-top-right-radius: 0;
 	padding: 0;
 }
+
 
 .product__details__tab .product__details__tab__desc {
 	padding-top: 44px;
@@ -268,7 +266,7 @@ ol {
 }
 
 /*---------------------
-  Shop Details
+  상세 페이지 하단 Details
 -----------------------*/
 
 .related-product {
