--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -1,5 +1,30 @@
 @charset "UTF-8";
 
+.boardcontainer{
+	width: 1050px;
+	margin-top:60px;
+	margin-left:400px;
+	
+}
+a{
+	text-decoration:none;
+}
+thead{
+	border:3px solid black;
+}
+
+tbody>tr:hover { 
+	background-color: rgb(255, 232, 232)
+}
+
+#deletebtn{
+	color:red;
+}
+
+.row{
+	width:1050px
+}
+
 .sidenav {
     height: 100%;
     width: 0;
