--- a/src/main/resources/static/fullcalendar-5.10.1/lib/main.css
+++ b/src/main/resources/static/fullcalendar-5.10.1/lib/main.css
@@ -296,10 +296,10 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
     margin-top: 1.5em;
   }
 .fc .fc-toolbar-title {
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin: 0;
-    padding-left: 10px;
     padding-top: 10px;
+    padding-right:7px;
   }
 .fc-direction-ltr .fc-toolbar > * > :not(:first-child) {
     margin-left: .75em; /* space between */
@@ -1472,4 +1472,16 @@ A VERTICAL event
 
 .fc-toolbar-chunk{
     margin-right: 10px;
+    display: flex;
+}
+
+button.fc-next-button.fc-button.fc-button-primary {
+    width: 30px;
+    padding: 0;
+}
+
+
+button.fc-prev-button.fc-button.fc-button-primary {
+    width: 30px;
+    padding: 0;
 }
