--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -10,3 +10,10 @@
     width: 1080px;
     margin: 0 auto;
 }
+
+#chatBtn{
+    position: fixed;
+    z-index: 999;
+    right: 170px;
+    bottom: 20px;
+}
