--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -100,57 +100,43 @@
     border-radius: 10px;
 }
 
+#calendar {
+    height: 100%;
+    width: 400px;
+}
+
 .lastSection{
-    border: 1px solid tomato;
     position: relative;
     display: flex;
-    justify-content: space-around;
-    margin-top: 10px;
+    justify-content: space-evenly;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .showMap{
     width: 330px;
-    border: 1px solid aquamarine;
     display: inline-block;
-}
-
-.showMap img{
-    width: 300px;
+    background-color: #deeefc;
+    border-radius: 10px;
 }
 
 .localHotChoice{
     width: 700px;
-    border: 1px solid seagreen;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 10px;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #faece2;
+    border-radius: 10px;
+}
+
+.localHotChoice .bannerContent{
+    padding-right: 20px;
+    padding-left: 30px;
 }
 
 .svg{
     height: 450px;
 }
 
-
-/* map 들어올 자리 */
-/*
-.dg-map-area{
-    float: left;
-    width: 100%;
-    border:1px solid #dcdcdc;
-    margin:30px 0 12px;
-}ß
-.dg-map{
-    text-align: center;
-    background: #f7f5f2;
-}
-.dg-map svg{
-    margin:65px 0 0;
-}
-.dg-map-in{
-    width: 50%;
-    float: left;
-    height: 540px;
-}
-*/
