--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -41,6 +41,7 @@
     font-size: 14px;
     line-height: 20px;
     outline: none;
+    margin-bottom:10px;
 }
 
 .loginButton, .SingupButton {
@@ -48,11 +49,28 @@
     overflow: hidden;
     width: 400px;
     height: 55px;
+     border: 1px solid #ccc;
     border-radius: 3px;
-    font-size: 10;
     text-align: center;
     margin-top: 20px;
     color: black;
+    background-color:white;
+    margin-top: 5px;
+}
+
+.loginButton:hover, .SingupButton:hover {
+	display: block;
+    overflow: hidden;
+    width: 400px;
+    height: 55px;
+    border: 1px solid red;
+    border-radius: 3px;
+    text-align: center;
+    margin-top: 20px;
+    color: red;
+    background-color:white;
+    margin-top: 5px;
+    transition: 0.5s;
 }
 
 .loginButton .text_type {
