--- a/src/main/resources/static/css/signUp.css
+++ b/src/main/resources/static/css/signUp.css
@@ -44,16 +44,31 @@
 
 .IDdouble_check{
 	padding:10px;
-	border: 1px solid rgb(0, 255, 255);
+	border: 1px solid black;
     background-color: #fff;
-    color: rgb(0, 255, 255);
+    color: black;
     display: inline-block;
-    width: 80px;
-    height: 23px;
+    width: 100px;
+    height: 45px;
     margin-left: 5px;
     text-align: center;
     border-radius: 3px;
     margin: 3px;
+}
+
+.IDdouble_check:hover{
+	padding:10px;
+	border: 1px solid #ff3333;
+    background-color: #fff;
+    color: #ff3333;
+    display: inline-block;
+    width: 100px;
+    height: 45px;
+    margin-left: 5px;
+    text-align: center;
+    border-radius: 3px;
+    margin: 3px;
+    transition : 0.5s;	
 }
 
 .Emaildouble_check{
@@ -93,6 +108,7 @@
 }
 
 
+
 .submitBox{
 	width: 240px;
 	margin: 0 auto;
@@ -113,15 +129,21 @@
 
 #submitBox:hover{
 	color : red;
-	background : rgb(192, 192, 192); 
+	background : white;
+	border: 1px solid red;
 	transition : 0.5s;	 
 }
 
 #checkboxBox{
-	margin-left: 60px;
-	
+	margin-left: 60px;	
 }
 
+#license{
+	margin-left:20px;
+}
 
+#family{
+	margin-left:74px;
+}
 
 
