--- a/src/main/resources/static/css/vote.css
+++ b/src/main/resources/static/css/vote.css
@@ -1,5 +1,30 @@
 /* vote.css */
 
+.card {
+  background: #fff;
+  border-radius: 30px;
+  display: inline-block;
+  height: 320px;
+  margin: 1rem;
+  position: relative;
+  width: 300px;
+  float:left;
+  margin-bottom:32px;
+}
+
+.card-2 {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+text-align:left;
+}
+
+.voteMain{
+	margin-top:25px;
+}
+
+.voteItem{
+	margin-top:53px;
+}
+
 .voteMain input[type=radio] {
     display: none;
 }
@@ -7,6 +32,8 @@
 #tab1:checked ~ .tab label:nth-child(1),
 #tab2:checked ~ .tab label:nth-child(2){
     box-shadow: none;
+	 background-color: #dbd5fd;
+	 color:white;
 }
 
 .voteContent > div{
@@ -21,14 +48,15 @@
 
 .tab{
     overflow: hidden;
+
 }
 
 .voteResult{
     margin-bottom: 15px;
-    border: 1px solid black;
     width: 1000px;
     margin-left: auto;
     margin-right: auto;
+    height:300px;
 }
 
 .tab label{
@@ -48,20 +76,33 @@
 
 .tab label:hover{
     background-color: #dbd5fd;
+    color: white;
+    -webkit-transition-duration: 0.4s; 
+    transition-duration: 0.4s;
+    cursor: pointer;
 }
+
 
 .voteContent > div{
     padding: 20px;
     font-size: 17px;
-    background-color: #f6f2ff;
+    background-color: white;
 }
 
-table{
+.tableItem{
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     width: 1000px;
+    border-collapse: collapse;
+    
 }
+
+  th, td {
+    border-bottom: 1px solid #e9e9e9;
+    padding: 10px;
+  }
+
 
 .voteResult{
     display: flex;
@@ -76,8 +117,46 @@ table{
     margin: auto;
 }
 
+.profileBoxTop{
+    width: 200px;
+    height: 200px;
+    border-radius: 70%;
+    overflow: hidden;
+    margin: 15px 15px 0px 50px;
+}
+
+.profileInfo{
+	padding-left:17px;
+}
+
 .profile{
     width: 100%;
     object-fit: cover;
+}
+
+.voteBtn {
+    background-color: #dbd5fd; 
+    border: none;
+    color: white;
+    padding: 9px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; 
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+.voteBtn {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #dbd5fd;
+}
+
+
+.voteBtn:hover {
+    background-color: #dbd5fd;
+    color: white;
 }
 
