--- a/src/main/resources/static/css/hall.css
+++ b/src/main/resources/static/css/hall.css
@@ -7,27 +7,45 @@ body {
 	
 }
 #공연장 { 
+	margin-left : auto;
+	margin-right : auto;
+	width : 80%; 
 	margin-top : 50px;
 	margin-bottom : 50px;
-	color : #FCF6F5;
+	color : black;
+	border-radius: 15px 15px 15px 15px; 
+	border: 3px solid #FFAD5B; 
+	padding: 0.5em 0.6em; color: black;
+	font-family : monospace;
+	
 }
+
 .wrap {
 	margin-bottom : 50px;
 }
 #지역 { 
+	width : 150px;
 	text-align : left;
 	margin-left : 110px;
-	color : #FCF6F5;
+	color : black;
 	font-size : 25px;
 	font-weight: bold;
-	
+	border-radius: 15px 15px 15px 15px; 
+	border: 3px solid #FFAD5B; 
+	padding: 0.5em 0.6em; 
+	color: black;
+	text-align : center;
 }
 .hall {
 	text-align : center;
 	padding-top : 30px;
 	padding-top : 10px;
 	padding-bottom : 30px;
-	background-image: linear-gradient(to bottom, rgba(0,0,0,0.2) 0%,rgba(0,0,0,0.2) 100%), url('/images/무대1.jpg');
+	background: linear-gradient(to right, #ffa7a3, #5673bd);
+	padding: 0.43em 1em; 
+	font-size: 19px; 
+	border-radius: 3px; 
+	color: #ffffff;
 }
 
 .list {
