2022년 2월 23일 백업

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -5,7 +5,7 @@
 
 #wrap{
     background: #FCF6F5;
-    /* text-align: center; */
+    text-align: center;
     position: relative;
     width: 1080px;
     margin: 0 auto;
