2022년 2월 24일 선호장르추천공연 바인딩 완료, 뮤지컬 insert 페이지 기능 구현

--- a/src/main/resources/static/css/signUp.css
+++ b/src/main/resources/static/css/signUp.css
@@ -42,7 +42,7 @@
 }
 
 
-.IDdouble_check{
+.IDdouble_check, .muscNoCheck{
 	padding:10px;
 	border: 1px solid black;
     background-color: #fff;
@@ -56,7 +56,7 @@
     margin: 3px;
 }
 
-.IDdouble_check:hover{
+.IDdouble_check:hover, .muscNoCheck:hover{
 	padding:10px;
 	border: 1px solid #ff3333;
     background-color: #fff;
