--- a/src/main/resources/static/css/hall.css
+++ b/src/main/resources/static/css/hall.css
@@ -14,7 +14,7 @@ body {
 	margin-bottom : 50px;
 	color : black;
 	border-radius: 15px 15px 15px 15px; 
-	border: 3px solid #FFAD5B; 
+	border: 2px solid;
 	padding: 0.5em 0.6em; color: black;
 	font-family : monospace;
 	
@@ -24,38 +24,54 @@ body {
 	margin-bottom : 50px;
 }
 #지역 { 
-	width : 150px;
-	text-align : left;
-	margin-left : 110px;
-	color : black;
-	font-size : 25px;
-	font-weight: bold;
-	border-radius: 15px 15px 15px 15px; 
-	border: 3px solid #FFAD5B; 
-	padding: 0.5em 0.6em; 
-	color: black;
-	text-align : center;
+	width: 116px;
+    text-align: left;
+    margin-left: 104px;
+    margin-bottom: 10px;
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 15px 15px 15px 15px;
+    border: 2px solid;
+    padding: 0.5em 0.6em;
+    color: black;
+    text-align: center;
 }
 .hall {
 	text-align : center;
 	padding-top : 30px;
 	padding-top : 10px;
 	padding-bottom : 30px;
-	background: linear-gradient(to right, #ffa7a3, #5673bd);
+	
 	padding: 0.43em 1em; 
 	font-size: 19px; 
-	border-radius: 3px; 
+	border-radius: 2px; 
 	color: #ffffff;
 }
 
 .list {
-	width : 80%;
-	margin-left : auto;
-	margin-right : auto;
-	margin-bottom : 50px;
-	color : black;
-	background-color : white;
+	width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    /* margin-bottom: 50px; */
+    color: black;
+    background-color: white;
+    border: 0px solid;
+    border-collapse: collapse;
+
+
 }
+.list-border {
+	width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+    color: black;
+    background-color: white;
+    border: 5px solid;
+    border-radius: 10px;
+}
+
 .list tr th {
 	width : 20%;
 }
