--- a/src/main/resources/static/css/board1.css
+++ b/src/main/resources/static/css/board1.css
@@ -17,6 +17,9 @@
   background-color: rgb(233, 233, 233);
 }
 
+#wrap{
+	background:white;
+}
 .writeinputbody {
   width: 500px;
   height: 570px;
@@ -48,8 +51,6 @@
     color: black; 
     border: 2px solid #5fb7d1;
 }
-
-
 
 .listbtn {
 	background-color: #5fb7d1; 
@@ -127,11 +128,18 @@
     -webkit-transition-duration: 0.4s; 
     transition-duration: 0.4s;
     cursor: pointer;
+    height:40px;
 }
 .writeBtn {
     background-color: white; 
     color: black; 
     border: 2px solid #5fb7d1;
+    
+}
+
+#writeBtn {
+    height:40px;
+    margin-bottom:45px;    
 }
 
 
@@ -177,14 +185,6 @@
 
 a{
 	text-decoration:none;
-}
-
-a:visited{
-	color:blue;
-}
-
-thead{
-	border:3px solid black;
 }
 
 
@@ -249,17 +249,8 @@ thead{
   .sidenav a {font-size: 18px;}
 }
 
-table {
-    width: 100%;
-    border-top: 1px solid #444444;
-    border-collapse: collapse;
-  }
   
-th, td {
-    border-bottom: 1px solid #444444;
-    padding: 10px;
-    
-}
+
 
 .board h2{
 	text-align:left;
