--- a/src/main/resources/static/css/ticketBook.css
+++ b/src/main/resources/static/css/ticketBook.css
@@ -1,6 +1,7 @@
 /* ticketBook.css */
 
 .ticketBookMain{
+    margin-top: 20px;
     border: 1px solid black;
     display: flex;
     justify-content: space-around;
