--- a/src/main/resources/static/css/board1.css
+++ b/src/main/resources/static/css/board1.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 .titlefont {
   border-radius: 15px 15px 15px 0;
-  border: 3px solid #5fb7d1;
+  border: 3px solid black;
   padding: 0.5em 0.6em; 
-  color: #5fb7d1;
+  color:black;
 }
 
 
@@ -42,7 +42,7 @@
 }
 
 .replybtn {
-    background-color: #5fb7d1; 
+    background-color: black; 
     border: none;
     color: white;
     padding: 1px 4px;
@@ -59,11 +59,11 @@
 .replybtn {
     background-color: white; 
     color: black; 
-    border: 2px solid #5fb7d1;
+    border: 2px solid black;
 }
 
 .listbtn {
-	background-color: #5fb7d1; 
+	background-color: black; 
     border: none;
     color: white;
     padding: 9px 20px;
@@ -82,12 +82,12 @@
 .listbtn {
     background-color: white; 
     color: black; 
-    border: 2px solid #5fb7d1;
+    border: 2px solid black;
 }
 
 
 .btn {
-    background-color: #5fb7d1; 
+    background-color: black; 
     border: none;
     color: white;
     padding: 4px 9px;
@@ -103,21 +103,21 @@
 .btn {
     background-color: white; 
     color: black; 
-    border: 2px solid #5fb7d1;
+    border: 2px solid black;
 }
 
 .btn:hover {
-    background-color: #5fb7d1;
+    background-color: black;
     color: white;
 }
 
 .replybtn:hover {
-    background-color: #5fb7d1;
+    background-color: black;
     color: white;
 }
 
 .listbtn:hover {
-    background-color: #5fb7d1;
+    background-color: black;
     color: white;
 }
 
@@ -126,7 +126,7 @@
 }
 
 .writeBtn {
-    background-color: #5fb7d1; 
+    background-color: black; 
     border: none;
     color: white;
     padding: 9px 20px;
@@ -143,7 +143,7 @@
 .writeBtn {
     background-color: white; 
     color: black; 
-    border: 2px solid #5fb7d1;
+    border: 2px solid black;
     
 }
 
@@ -154,32 +154,30 @@
 
 
 .writeBtn:hover {
-    background-color: #5fb7d1;
+    background-color: black;
     color: white;
 }
 
 
 
 .boardcontainer{
-	width: 1080px;
-	margin-top:60px;
+
+	margin-top:15px;
 	margin-left:-5px;
 	margin-bottom: 150px
 }
 
-.board{
-	width: 1090px;
-}
+
 .viewcontainer{
-	width: 1080px;
-	margin-top:60px;
+
+	margin-top:15px;
 	margin-left:18px;
 	margin-bottom:120px
 }
 
 .writecontainer{
-	width: 1080px;
-	margin-top:60px;
+
+	margin-top:15px;
 	margin-left:-5px;
 	height: 980px;
 	
@@ -208,9 +206,6 @@ a{
 	color:red;
 }
 
-.row{
-	width:1050px
-}
 
 .sidenav {
     height: 100%;
@@ -269,6 +264,7 @@ a{
 
 #boardmenu{
 	text-align:left; 
+	margin-top:30px;
 }
 
 .replyinput{
