--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,18 +1,40 @@
 @charset "utf-8";
 
+.bannerTitle{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.bannerTitle_1{
+    letter-spacing: 0.05em;
+    font-size: 20px;
+    font-family: futra-lt-w05-book, fangsong;
+    padding: 5px;
+}
+
+.bannerTitle_2{
+    font-size: 47px;
+    font-family: Georgia, Palatino, serif;
+    font-weight: bold;
+    padding: 5px;
+}
+
 .bannerMenu{
-    background: #F0EDCC;
     color: #234E70;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: relative;
+    z-index: 2;
 }
 
 .bannerMenu h2{
-    color: #234E70;
+    color: black;
     padding-top: 5px;
 }
 
 .bannerPoster img{
-    width: 123px;
-    height: 150px;
+    width: 150px;
+    height: 200px;
 }
 
 .bannerPosterTitle{
@@ -28,17 +50,31 @@
     padding: 18px;
 }
 
+.mainBanner{
+    position: relative;
+}
+
 #bannerName{
     text-align: right;
     padding-right: 100px;
     height: 20px;
 }
 
+.sectionBackground{
+    background-color: #021726;
+    position: absolute;
+    z-index: 1;
+    width: 1200px;
+    top: 920px;
+    padding-top: 50px;
+    padding-bottom: 130px;
+}
+
 .secondSection{
     position: relative;
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 600px;
     height: 400px;
 }
 
@@ -46,7 +82,7 @@
     text-align: left;
     padding-left: 15px;
     margin-top: 3px;
-    color: #FBF8BE;
+    /*color: #FBF8BE;*/
 }
 
 .RecogNumberItem{
@@ -56,13 +92,14 @@
 
 .RecogMain{
     position: relative;
-    display: inline-block;
-    width: 450px;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
 }
 
 .RecogMainMenu{
     position: relative;
-    height: 350px;
 }
 
 .RecogSub{
@@ -83,7 +120,7 @@
     height: 400px;
     position: relative;
     display: inline-block;
-    background-color: #234E70;
+    /*background-color: #234E70;*/
     border-radius: 10px;
     padding-right: 7px;
 }
@@ -97,13 +134,14 @@
     margin-right: 5px;
     padding-left: 5px;
     padding-bottom: 10px;
-    background-color: #FFFFFF;
+    /*background-color: #FFFFFF;*/
     border-radius: 10px;
 }
 
 #calendar {
     height: 100%;
     width: 400px;
+    /*background-color: #FFFFFF;*/
 }
 
 .lastSection{
@@ -117,7 +155,7 @@
 .showMap{
     width: 330px;
     display: inline-block;
-    background-color: #deeefc;
+    /*background-color: #deeefc;*/
     border-radius: 10px;
 }
 
@@ -128,10 +166,13 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
-    background-color: #faece2;
+    /*background-color: #faece2;*/
     border-radius: 10px;
 }
 
+.localPoster img{
+    width: 123px;
+}
 .localHotChoice .bannerContent{
     padding-right: 20px;
     padding-left: 30px;
