--- a/src/main/resources/static/css/signUp.css
+++ b/src/main/resources/static/css/signUp.css
@@ -39,7 +39,6 @@
 
 .memberTable{
 	margin: 0 auto;
-	margin-left: 19%;
 }
 
 
@@ -103,10 +102,6 @@
     margin-bottom: 10px;
 }
 
-#form input[type=text]:focus, #form input[type=password]:focus{
-	border : 2px solid blue;
-}
-
 
 .necessary{
 	color : red;	
@@ -121,27 +116,34 @@
 
 #submitBox{
 	width: 240px;
-    height: 55px;
-    font-size: 25px;
-    padding: 0px 30px;
-    background-color: white;
-    color: black;
-    border: 3px solid black;
-    border-radius: 30px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    font-family: sans-serif;
-    transition: all 0.4s;
+    height: 56px;
+    font-size: 16px;
+    line-height: 54px;
+    margin: 0 auto;
+    color: #333;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    background: #fff;
+    margin-bottom: 50px;
 }
 
 #submitBox:hover{
-	background-color: black;
-    color: white;
+	color : red;
+	background : white;
+	border: 1px solid red;
+	transition : 0.5s;	 
 }
 
 #checkboxBox{
 	margin-left: 60px;	
 }
 
+#license{
+	margin-left:20px;
+}
+
+#family{
+	margin-left:74px;
+}
 
 
