--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -5,8 +5,7 @@
 }
 
 #wrap{
-
-    background: #FCF6F5;
+    background-color: #FFFFFF;
     text-align: center;
     position: relative;
     width: 1200px;
