--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -95,3 +95,14 @@
     width: 60px;
     height: 40px;
 }
+
+.table-responsive > .table  input{
+    height: 30px;
+    /* border: none; */
+    border: 0.5px solid #0101;
+    width: 100%;
+    text-align: center;
+    font-family: GowunDodum-Regular, serif;
+    font-size: 0.875rem;
+    overflow: auto;
+}
