--- a/src/main/resources/static/css/ticketBook.css
+++ b/src/main/resources/static/css/ticketBook.css
@@ -1,34 +1,36 @@
 /* ticketBook.css */
 
 .ticketBookMain{
-    margin-top: 20px;
-    border: 1px solid black;
+    margin-top: 40px;
     display: flex;
     justify-content: space-around;
     height: 580px;
 }
 
 .MyPage{
-    border: 1px solid red;
     width: 70%;
     display: block;
+    margin-top: 30px;
+}
+
+.admin_table{
+    width: 100%;
+    font-family: GowunDodum-Regular, serif;
+    font-size: 1rem;
 }
 
 .MyPageContent{
-    border: 1px solid green;
     display: block;
     height: 150px;
 }
 
 .userInfo{
-    border: 1px solid green;
     display: flex;
     justify-content: space-around;
     height: 90px;
 }
 
 .user_ticket_Info{
-    border: 1px solid darkviolet;
     display: flex;
     justify-content: space-around;
     height: 60px;
@@ -36,12 +38,11 @@
 
 .ticketBook{
     display: flex;
-    justify-content: space-around;
-    text-align: center;
 }
 
 .ticketBookContent{
     margin-top: 10px;
+    margin-left: 30px;
 }
 
 .ticketBookContent img{
@@ -50,6 +51,5 @@
 }
 
 .RecogMusical{
-    border: 1px solid blue;
     width: 30%;
 }
