--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -9,12 +9,6 @@
     padding-bottom: 60px;
 }
 
-#loginForm{
-	margin : 0 auto;
-	width: 400px;
-	height: 330px;
-	
-}
 .logintitle {
     font-weight: 800;
     font-size: 20px;
@@ -31,37 +25,26 @@
 }
 
 .loginSection{
-    width: 400px;
+    width: 360px;
     margin: 0 auto;
     padding-top: 90px;
     letter-spacing: -.6px;
 }
 
 .loginSection input[type=number], .loginSection input[type=text], .loginSection input[type=password] {
-    width: 90%;
+    width: 100%;
     height: 54px;
     padding: 0 19px;
     border: 1px solid #ccc;
     border-radius: 3px;
     background-color: #fff;
-    font-size: 14px;
+    font-size: 14px; 
     line-height: 20px;
     outline: none;
     margin-bottom:10px;
 }
 
-#naver{
-	width: 30px;
-	height: 30px;
-}
-
-#naver_button{
-	border: 0px;
-	width: 30px;
-	height: 30px;
-}
-
-.loginButton, .SingupButton {
+.loginButton, .SingupButton, .GenreButton {
 	display: block;
     overflow: hidden;
     width: 400px;
@@ -75,7 +58,7 @@
     margin-top: 5px;
 }
 
-.loginButton:hover, .SingupButton:hover {
+.loginButton:hover, .SingupButton:hover, .GenreButton:hover {
 	display: block;
     overflow: hidden;
     width: 400px;
@@ -98,11 +81,6 @@
     color: black;
 }
 
-#naver_id_login{
-	width:100%;
-}
-
-#naver_button{
-	width:332px;
-	height:60px;
+.GenreButton .text_type {
+    color: black;
 }
